# SHDP

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  PROTOCOL.md  README.md
.github/workflows/: blank.yml
examples/server/v1/: Cargo.toml
examples/server/v1/src/: answer_component_needs_request.rs  answer_interaction_request.rs
src/: lib.rs  prelude.rs
src/client/: mod.rs  prelude.rs  tcp.rs  tls.rs  ws.rs  wss.rs
src/examples/server/v1/: answer_component_needs_request.rs  answer_interaction_request.rs
src/protocol/: args.rs  errors.rs  mod.rs  prelude.rs  versions.rs
src/protocol/client/: event.rs  mod.rs
src/protocol/client/bits/: builder.rs  decoder.rs  utils.rs
src/protocol/client/versions/v1/: c0x0000.rs  c0x0005.rs  mod.rs  r0x0001.rs  r0x0002.rs  r0x0003.rs  r0x0004.rs  r0x0006.rs
src/protocol/managers/: event.rs  mod.rs  registry.rs
src/protocol/managers/bits/: decoder.rs  encoder.rs  mod.rs  prelude.rs
src/protocol/server/: builder.rs  decoder.rs  event.rs  mod.rs
src/protocol/server/bits/: builder.rs  decoder.rs  utils.rs
src/protocol/server/versions/: mod.rs  registry.rs
src/protocol/server/versions/v1/: c0x0001.rs  c0x0002.rs  c0x0003.rs  c0x0004.rs  c0x0006.rs  mod.rs  r0x0000.rs  r0x0005.rs
src/server/: mod.rs  prelude.rs  tcp.rs  tls.rs  ws.rs  wss.rs
src/tests/: frame_decoding.rs  frame_error_decoding.rs  mod.rs  t0x0000_event_decoding_full_track.rs  t0x0001_event_decoding_full_track.rs  t0x0002_event_decoding_full_track.rs  t0x0003_event_decoding_full_track.rs  t0x0004_event_decoding_full_track.rs  t0x0005_event_decoding_full_track.rs  t0x0006_event_decoding_full_track.rs
src/tests/client/: mod.rs  tcp_client_connection.rs  ws_client_connection.rs
src/tests/res/: test.html
src/tests/server/: mod.rs  tcp_server_opening_and_closing.rs  ws_server_opening.rs  ws_server_opening_and_closing.rs
