[package]
name = "shdp"
version = "1.0.3"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }
async-tungstenite = "0.25.1"
bitvec = "1.0.1"
ego-tree = {version = "0.6.2", optional = true}
futures = "0.3.30"
futures-util = {version = "0.3.30", optional = true}
html-minifier = {version = "5.0.0",  optional = true}
lazy_static = "1.4.0"
openssl = {version = "0.10.64", optional = true}
scraper = {version = "0.19.0", optional = true}
serde = {version = "1.0.199", optional = true}
serde_json = {version = "1.0.116", optional = true}
tokio = { version = "1.37.0", optional = true, features = ["rt", "sync"] }
tungstenite = "0.21.0"


[features]
default = ["tls-server", "tls-client", "wss-server", "wss-client", "serde"]
serde = ["dep:serde", "dep:serde_json"]
tcp-server = ["html-minifier", "ego-tree", "scraper"]
tcp-client = []
ws-server = ["html-minifier", "ego-tree", "scraper", "tokio", "futures-util"]
ws-client = []
wss-server = ["ws-server"]
wss-client = ["ws-client"]
tls-client = ["tcp-client"]
tls-server = ["tcp-server", "openssl"]
debug = []
tokio = ["dep:tokio"]
