[package]
name = "shdp"
version = "1.1.6"
authors = ["Devling"]
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"], optional = true }
async-tls = { version = "0.12.0", optional = true}
async-tungstenite = { version = "0.25.1", optional = true }
bitvec = "1.0.1"
ctor = "0.2.8"
ego-tree = {version = "0.6.2", optional = true}
futures = {version = "0.3.30", optional = true}
html-minifier = {version = "5.0.0",  optional = true}
lazy_static = "1.4.0"
openssl = {version = "0.10.64", optional = true}
rustls = { version = "0.20.6", default-features = false, features = ["log", "logging", "tls12"], optional = true}
rustls-pemfile = { version = "1.0", optional = true}
scraper = {version = "0.19.0", optional = true}
serde = {version = "1.0.199", optional = true}
serde_json = {version = "1.0.116", optional = true}
tokio = { version = "1.37.0", features = ["full", "sync", "test-util"], optional = true }
tokio-openssl = { version = "0.6.4", optional = true }
tungstenite = {version = "0.21.0", optional = true}


[features]
default = ["wss-client", "wss-server", "ws-client", "ws-server", "tls-client", "tls-server", "tcp-client", "tls-server", "serde", "debug"]
serde = ["dep:serde", "dep:serde_json"]
tcp-server = ["html-minifier", "ego-tree", "scraper", "dep:tokio", "async-std"]
tcp-client = ["dep:tokio"]
ws-server = ["html-minifier", "ego-tree", "scraper", "async-std", "futures", "dep:tokio", "tungstenite", "dep:async-tungstenite"]
ws-client = ["tungstenite", "dep:tokio"]
wss-server = ["ws-server", "async-tls", "rustls", "rustls-pemfile"]
wss-client = ["ws-client", "openssl"]
tls-client = ["tcp-client", "openssl", "dep:tokio-openssl"]
tls-server = ["tcp-server", "openssl", "dep:tokio-openssl"]
debug = []
